--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>call of olympus</h1>
     <h2>bando de orelhudos</h2>
     <img src="images.jpeg" alt="">
+    <h3>meu amor aqui embaixo S2</h3>
+    <img src="ricardo.jpeg" alt="">
 </body>
 </html>
