--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <h1>call of olympus</h1>
+    <h1>vlor anarela</h1>
     <h2>bando de orelhudos</h2>
     <img src="images.jpeg" alt="">
     <h3>meu amor aqui embaixo S2</h3>
