--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>vlor anarela :)</h1>
-    <h2>bando de orelhudos</h2>
+    <h1>agui enbacho :D</h1>
     <img src="images.jpeg" alt="">
     <h3>meu amor aqui embaixo S2</h3>
     <img src="ricardo.jpeg" alt="">
