--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <title>Pau de Anao</title>
+    <title>cCOISAS QUE EU AMO</title>
    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -14,5 +14,9 @@
     <img src="ricardo.jpeg" alt="">
     <h4>RAIGUASA</h4>
     <img src="raiguasa.png" alt="">
+    <H5>Kurome :3</H5>
+    <img src="kurome.jpeg" alt="">
+    <h6>VOSE</h6>
+    <img src="DEDO.jpeg" alt="">
 </body>
 </html>
