--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <title>cCOISAS QUE EU AMO</title>
+    <title>COISAS QUE EU AMO <3 </title>
    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -18,5 +18,8 @@
     <img src="kurome.jpeg" alt="">
     <h6>VOSE</h6>
     <img src="DEDO.jpeg" alt="">
+    <Nav>
+
+    </Nav>
 </body>
 </html>
