--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <img src="kurome.jpeg" alt="">
     <h6>VOSE</h6>
     <img src="DEDO.jpeg" alt="">
+    <img src="Flávio-Bolsonaro-e-Jair-Bolsonaro.webp" alt="">
     <Nav>
-
+        <div class="logo">
+            
+        </div>
     </Nav>
 </body>
 </html>
