--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <h6>VOSE</h6>
     <img src="DEDO.jpeg" alt="">
     <img src="Flávio-Bolsonaro-e-Jair-Bolsonaro.webp" alt="">
+    <img src="bolsochan.jpg" alt="">
     <Nav>
         <div class="logo">
+            <a href=""></a>
             
         </div>
     </Nav>
