--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img src="bolsochan.jpg" alt="">
     <Nav>
         <div class="logo">
-            <a href=""></a>
+            <a href="sobremim.html"></a>
             
         </div>
     </Nav>
