--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
             
         </div>
     </Nav>
+    <header>
+        <section id="banner">
+            <div class="">
+            
+            </div>
+
+        </section>
+    </header>
 </body>
 </html>
