--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </Nav>
     <header>
         <section id="banner">
-            <div class="">
+            <div class="container">
             
             </div>
 
